Thu Jul 14 12:19:34 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl.c (ossl_verify_cb): trap the exception from
	  verify callback of SSLContext and X509Store and make the
	  verification fail normally. Raising exception directly from callback
	  causes orphan resouces in OpenSSL stack. Patched by Ippei Obayashi.
	  See #4445.

	* test/openssl/test_ssl.rb
	  (test_exception_in_verify_callback_is_ignored): test it.

Tue Jul 12 23:41:49 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* NEWS: add a description of Signal.trap change.

Tue Jul 12 20:02:35 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (reserved_signal_p): reverted a part of r32523.
	  chikanaga noticed trap(:CHLD) has some realworld usecase.
	* test/ruby/test_signal.rb (TestSignal#test_reserved_signal):
	  ditto.

Tue Jul 12 17:12:45 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* vm_method.c (rb_add_method): should not call method_added hook
	  for undef operation. [Bug #5015]

Tue Jul 12 16:58:44 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb(Test::Unit::Options#process_args): Fix bug.
	  Fix process_args didn't return `@option` after r30939.

Tue Jul 12 14:07:46 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (install_sighandler): fixed a race.

Tue Jul 12 13:49:32 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (sig_trap): don't permit to change a signal handler which
	  the interpreter reserved.
	* signal.c (reserved_signal_p): ditto.
	  [Bug #2616] [ruby-core:27625]

	* test/ruby/test_signal.rb (TestSignal#test_reserved_signal):
	  added a test for reserved signal.

Tue Jul 12 11:58:28 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/setup.mak: support x86-amd64 cross compile environment.

Mon Jul 11 23:22:28 2011  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* time.c: can't compile time.c on AIX due to missing declaration for
	  ffs(). It is declared in strings.h on AIX.
