@@ -999,7 +999,9 @@ strhash(st_data_t arg)
 #else
 
 #ifndef UNALIGNED_WORD_ACCESS
-# if defined __i386__ || defined _M_IX86
+# if defined(__i386) || defined(__i386__) || defined(_M_IX86) || \
+     defined(__x86_64) || defined(__x86_64__) || defined(_M_AMD86) || \
+     defined(__mc68020__)
 #   define UNALIGNED_WORD_ACCESS 1
 # endif
 #endif
